@@ -32,6 +32,7 @@ features:
   methods for sorting, insertion and deletion
 - added a data pointer to each node of the SCIP_DIGRAPH
 - the statistics now include the value of the first LP solved at the root node (without cuts)
+- all readers now take the global parameters "reading/dynamic{conss|cols|rows}" into account.
 
 performance improvements:
 - conflict consisting of exactly two binary variables will be handled as set-packing constraint instead of an logicor
